<resources>
    <string name="app_name">DataLoaderApp</string>
    <string name="search_vehicles">Search Vehicles</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="ending">Ending</string>
    <string name="bids">Bids</string>
    <string name="my_bids">My Bids</string>
    <string name="filter_by">Filter By</string>
    <string name="map_view">Map View</string>
    <string name="staticnumber"># 470739</string>
    <string name="lv_mercedez">LV Mercedez</string>
    <string name="aed_600">AED 103,600</string>
    <string name="_21">21</string>
    <string name="static_time">1d: 5h: 3m</string>
    <string name="removed">favourite removed</string>
    <string name="added">favourite added</string>
    <string name="carsdatabase_db">carsdatabase.db</string>
</resources>