<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_95sdp"
    android:layout_marginHorizontal="@dimen/_7sdp"
    android:layout_marginTop="@dimen/_9sdp"
    android:background="@drawable/shape_et_bg"
    android:minHeight="@dimen/_95sdp"
    app:cardCornerRadius="@dimen/_4sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_car"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="@dimen/_23sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guildeline_35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:padding="@dimen/_3sdp"
            android:background="@drawable/shape_circle"
            android:id="@+id/iv_fvrt_id"
            android:src="@drawable/icon_heart_hollow"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toStartOf="@id/guildeline_35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildeline_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/tv_post_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:gravity="center"
            android:text="@string/staticnumber"
            android:textColor="@color/darkgrey_color"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guildeline_35"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_car_brand_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/lv_mercedez"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/tv_post_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_number" />

        <TextView
            android:id="@+id/tv_amount_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/aed_600"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:textColor="@color/red_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/tv_post_number"
            app:layout_constraintTop_toBottomOf="@id/tv_car_brand_id" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/_9sdp"
            android:background="#E1E0E0"
            android:gravity="center"
            android:text="@string/lv_mercedez"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_post_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />


        <ImageView
            android:id="@+id/imgRepair"
            android:src="@drawable/icon_hamer"
            app:layout_constraintTop_toTopOf="@id/tv_ending_time"
            app:layout_constraintBottom_toBottomOf="@id/tv_ending_time"
            app:layout_constraintStart_toStartOf="@id/view"
            android:layout_width="18dp"
            android:layout_height="18dp"/>

        <TextView
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imgRepair"
            app:layout_constraintBottom_toBottomOf="@id/imgRepair"
            app:layout_constraintStart_toEndOf="@id/imgRepair"/>
        <TextView
            android:id="@+id/tv_ending_time"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/guildeline_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:drawableStart="@drawable/icon_time"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:text="@string/static_time"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>